syntax = "proto3";

package greet;

message Greeting {
    string first_name=1;
    string last_name=2;
}

message GreetingRequest {
    Greeting Greeting=1;
}

message GreetingResponse {
    string result=1;
}

message GreeManyTimesRequest {
    Greeting Greeting=1;
}

message GreetManyTimesResponse {
    string result=1;
}

message LongGreeRequest {
    Greeting Greeting=1;
}

message LongGreetResponse {
    string result=1;
}

service GreetingService {
    // Unary
    rpc Greet(GreetingRequest) returns (GreetingResponse) {}

    // Server Streaming
    rpc GreeManyTimes(GreeManyTimesRequest) returns (stream  GreetManyTimesResponse) {}

    // Client Straming
    rpc LongGreat(stream LongGreeRequest) returns (LongGreetResponse) {}

    // BiDirectional Streaming
    rpc GreatEveryone(stream GreetingRequest) returns (stream GreetingResponse) {}
}